Правильно скрывает логические заголовки

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,16 @@ ul {
 
 /* Скрываем логические заголовки */
 .unvisible {
-    display: none;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
 }
 
 /* Особенности (Преимущества) */
